clusters/common/apps/flux-system/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: keiretsu
  hostnames:
    - "capacitor.${LOCATION}.${RAJSINGH_INFO_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: capacitor
          port: 9000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
